--- a/libs/common/src/lib/resources/resource-list/processed-resource-table/processed-resource-table.component.html
+++ b/libs/common/src/lib/resources/resource-list/processed-resource-table/processed-resource-table.component.html
@@ -216,9 +216,11 @@
                   <pa-option (selectOption)="triggerAction(row.resource, 'classify')">
                     {{ 'resource.menu.classify' | translate }}
                   </pa-option>
-                  <pa-option (selectOption)="triggerAction(row.resource, 'summarize')">
-                    {{ 'resource.menu.summarize' | translate }}
-                  </pa-option>
+                  @if (isSummarizationEnabled | async) {
+                    <pa-option (selectOption)="triggerAction(row.resource, 'summarize')">
+                      {{ 'resource.menu.summarize' | translate }}
+                    </pa-option>
+                  }
                   <pa-option (selectOption)="triggerAction(row.resource, 'reprocess')">
                     {{ 'generic.reindex' | translate }}
                   </pa-option>
