[sc-8270] Display relations in a modal
Move relations out of the search results layout and display them in a modal instead, which is displayed when clicking on an info button next to the search bar.

--- a/libs/search-widget/src/common/modal/Modal.scss
+++ b/libs/search-widget/src/common/modal/Modal.scss
@@ -16,8 +16,8 @@
   }
 
   &:not(.popup) .modal-content {
-    width: var(--modal-width, fit-content);
-    height: var(--modal-height, fit-content);
+    width: fit-content;
+    height: fit-content;
   }
 }
 @media (min-width: 599px) {
@@ -29,10 +29,6 @@
     }
     &.popup.align-right .modal {
       left: max(calc(var(--popup-left) - var(--modal-width)), 0px);
-    }
-    &:not(.popup) .modal-content {
-      width: var(--resource-modal-width-md, fit-content);
-      height: 100vh;
     }
   }
 }
