[sc-8280] Fix consumption price

--- a/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.html
+++ b/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.html
@@ -114,7 +114,7 @@
           <td>{{ 'billing.usage.consumption' | translate }}*</td>
           @for (tier of tiers; track tier) {
             @if ((prices | async)?.[tier]?.usage?.['ai-tokens-used']?.price; as price) {
-              <td>{{ price * tokensPerRequest | currency: currency }}</td>
+              <td>{{ price * tokensPerRequest | currency: currency : 'symbol' : '1.2-6' }}</td>
             }
           }
         </tr>
