[sc-8274] consistent language model on KB creation
- Create a standalone component for language field in KB creation
- Move function allowing to get KB configuration from backend configuration and user’s choices to the core lib.
- Update KB création dialog to use the new language-field component
- Fix KB creation from onboarding by passing account id instead of account slug (have been broken during SDK clean up)

--- a/libs/user/src/lib/onboarding/step2/step2.component.html
+++ b/libs/user/src/lib/onboarding/step2/step2.component.html
@@ -23,20 +23,8 @@
       }
     </pa-radio-group>
   </div>
-  <div class="field">
-    <label class="title-s">{{ 'onboarding.step2.languages.label' | translate }}</label>
-    <pa-radio-group formControlName="multilingual">
-      <pa-radio value="english">{{ 'onboarding.step2.languages.english' | translate }}</pa-radio>
-      <pa-radio value="multilingual">{{ 'onboarding.step2.languages.multilingual' | translate }}</pa-radio>
-    </pa-radio-group>
-    @if (multilingualSelected) {
-      <div class="second-choice languages-container">
-        @for (language of languages; track language.label) {
-          <pa-checkbox [(value)]="language.selected">{{ language.label }}</pa-checkbox>
-        }
-      </div>
-    }
-  </div>
+  <nus-language-field (languageSelected)="updateLanguages($event)"></nus-language-field>
+
   @if (datasets.length > 0) {
     <div class="field">
       <label class="title-s">{{ 'onboarding.step2.starting-data.label' | translate }}</label>
