--- a/libs/common/src/lib/kb-add/kb-add.component.html
+++ b/libs/common/src/lib/kb-add/kb-add.component.html
@@ -3,106 +3,111 @@
     {{ 'stash.create.title' | translate }}
   </pa-modal-title>
   <pa-modal-content>
-    <form
-      *ngIf="kbForm"
-      class="form-container"
-      [formGroup]="kbForm"
-      (ngSubmit)="save()">
-      <ng-container *ngIf="step === 0">
-        <pa-input
-          id="kb-title"
-          formControlName="title"
-          [errorMessages]="validationMessages['title']">
-          {{ 'stash.name' | translate }}
-        </pa-input>
+    @if (kbForm) {
+      <form
+        class="form-container"
+        [formGroup]="kbForm"
+        (ngSubmit)="save()">
+        @if (step === 0) {
+          <pa-input
+            id="kb-title"
+            formControlName="title"
+            [errorMessages]="validationMessages['title']">
+            {{ 'stash.name' | translate }}
+          </pa-input>
 
-        <pa-textarea
-          id="kb-description"
-          formControlName="description"
-          [rows]="4">
-          {{ 'generic.description' | translate }}
-        </pa-textarea>
+          <pa-textarea
+            id="kb-description"
+            formControlName="description"
+            [rows]="4">
+            {{ 'generic.description' | translate }}
+          </pa-textarea>
 
-        <div class="kb-add-separator"></div>
-        <div
-          class="kb-add-zone"
-          *ngIf="zones.length > 0">
-          <h4>{{ 'generic.zone' | translate }}</h4>
-          <div class="mb-24">{{ 'stash.create.zone_description' | translate }}</div>
-          <pa-select
-            formControlName="zone"
-            externalLabel
-            [readonly]="zones.length === 1"
-            class="kb-add-zone-select">
-            <pa-option
-              *ngFor="let zone of zones"
-              [value]="zone.slug">
-              {{ zone.title }}
-            </pa-option>
-          </pa-select>
-        </div>
-      </ng-container>
-
-      <ng-container *ngIf="step === 1">
-        <div
-          formGroupName="config"
-          class="learning-config">
-          <div *ngFor="let conf of displayedLearningConfigurations">
-            <h3>{{ 'stash.create.' + conf.id + '.label' | translate }}</h3>
-            <p>{{ 'stash.create.' + conf.id + '.help' | translate }}</p>
-            <pa-radio-group
-              [formControlName]="conf.id"
-              [name]="conf.id">
-              <pa-radio
-                *ngFor="let option of conf.data.options"
-                [value]="option.value">
-                {{ option | learningOption: conf.id }}
-              </pa-radio>
-            </pa-radio-group>
+          <div class="kb-add-separator"></div>
+          @if (zones.length > 0) {
+            <div class="kb-add-zone">
+              <h4>{{ 'generic.zone' | translate }}</h4>
+              <div class="mb-24">{{ 'stash.create.zone_description' | translate }}</div>
+              <pa-select
+                formControlName="zone"
+                externalLabel
+                [readonly]="zones.length === 1"
+                class="kb-add-zone-select">
+                @for (zone of zones; track zone.id) {
+                  <pa-option [value]="zone.slug">
+                    {{ zone.title }}
+                  </pa-option>
+                }
+              </pa-select>
+            </div>
+          }
+        } @else if (step === 1) {
+          <div
+            formGroupName="config"
+            class="learning-config">
+            <nus-language-field (languageSelected)="updateLanguages($event)"></nus-language-field>
+            @for (conf of displayedLearningConfigurations; track conf.id) {
+              <div>
+                <h3>{{ 'stash.create.' + conf.id + '.label' | translate }}</h3>
+                <p>{{ 'stash.create.' + conf.id + '.help' | translate }}</p>
+                <pa-radio-group
+                  [formControlName]="conf.id"
+                  [name]="conf.id">
+                  <pa-radio
+                    *ngFor="let option of conf.data.options"
+                    [value]="option.value">
+                    {{ option | learningOption: conf.id }}
+                  </pa-radio>
+                </pa-radio-group>
+              </div>
+            }
           </div>
-        </div>
-
-        <div
-          *ngIf="creationInProgress"
-          class="saving-spinner">
-          <nsi-spinner size="large"></nsi-spinner>
-          <p>{{ 'stash.create.in_progress' | translate }}</p>
-        </div>
-      </ng-container>
-    </form>
+          @if (creationInProgress) {
+            <div class="saving-spinner">
+              <nsi-spinner size="large"></nsi-spinner>
+              <p>{{ 'stash.create.in_progress' | translate }}</p>
+            </div>
+          }
+        }
+      </form>
+    }
   </pa-modal-content>
 
   <pa-modal-footer>
     <div class="kb-creation-footer">
-      <div
-        *ngIf="error"
-        class="error body-m">
-        {{ error | translate }}
-      </div>
+      @if (error) {
+        <div class="error body-m">
+          {{ error | translate }}
+        </div>
+      }
+
       <div class="footer-buttons">
-        <pa-button
-          *ngIf="step > 0"
-          aspect="basic"
-          [disabled]="saving"
-          (click)="back()">
-          {{ 'generic.back' | translate }}
-        </pa-button>
+        @if (step > 0) {
+          <pa-button
+            aspect="basic"
+            [disabled]="saving"
+            (click)="back()">
+            {{ 'generic.back' | translate }}
+          </pa-button>
+        }
 
-        <pa-button
-          *ngIf="step === lastStep"
-          type="submit"
-          kind="primary"
-          [disabled]="saving"
-          (click)="save()">
-          {{ 'generic.save' | translate }}
-        </pa-button>
+        @if (step === lastStep) {
+          <pa-button
+            type="submit"
+            kind="primary"
+            [disabled]="saving"
+            (click)="save()">
+            {{ 'generic.save' | translate }}
+          </pa-button>
+        }
 
-        <pa-button
-          *ngIf="step < lastStep"
-          [disabled]="step === 0 && kbForm?.invalid"
-          (click)="next()">
-          {{ 'generic.next' | translate }}
-        </pa-button>
+        @if (step < lastStep) {
+          <pa-button
+            [disabled]="step === 0 && kbForm?.invalid"
+            (click)="next()">
+            {{ 'generic.next' | translate }}
+          </pa-button>
+        }
       </div>
       <div class="steps">
         <small>{{ step + 1 }} / {{ totalSteps }}</small>
