--- a/apps/dashboard/src/app/account/account-kbs/users-dialog/users-dialog.component.html
+++ b/apps/dashboard/src/app/account/account-kbs/users-dialog/users-dialog.component.html
@@ -1,5 +1,5 @@
 <pa-modal-advanced fitContent>
-  <pa-modal-title>{{ 'account.stash.users' | translate }}</pa-modal-title>
+  <pa-modal-title>{{ 'account.kb.users' | translate }}</pa-modal-title>
   <pa-modal-content>
     <app-users-manage></app-users-manage>
   </pa-modal-content>
