--- a/libs/common/src/lib/kb-add/kb-add.component.html
+++ b/libs/common/src/lib/kb-add/kb-add.component.html
@@ -1,6 +1,6 @@
-<pa-modal-advanced>
+<pa-modal-advanced fitContentHeight>
   <pa-modal-title>
-    {{ 'stash.create.title' | translate }}
+    {{ 'kb.create.title' | translate }}
   </pa-modal-title>
   <pa-modal-content>
     @if (kbForm) {
@@ -13,7 +13,7 @@
             id="kb-title"
             formControlName="title"
             [errorMessages]="validationMessages['title']">
-            {{ 'stash.name' | translate }}
+            {{ 'kb.name' | translate }}
           </pa-input>
 
           <pa-textarea
@@ -23,14 +23,11 @@
             {{ 'generic.description' | translate }}
           </pa-textarea>
 
-          <div class="kb-add-separator"></div>
           @if (zones.length > 0) {
             <div class="kb-add-zone">
-              <h4>{{ 'generic.zone' | translate }}</h4>
-              <div class="mb-24">{{ 'stash.create.zone_description' | translate }}</div>
               <pa-select
                 formControlName="zone"
-                externalLabel
+                [label]="'generic.zone' | translate"
                 [readonly]="zones.length === 1"
                 class="kb-add-zone-select">
                 @for (zone of zones; track zone.id) {
@@ -42,30 +39,22 @@
             </div>
           }
         } @else if (step === 1) {
-          <div
-            formGroupName="config"
-            class="learning-config">
+          <div class="learning-config">
             <nus-language-field (languageSelected)="updateLanguages($event)"></nus-language-field>
-            @for (conf of displayedLearningConfigurations; track conf.id) {
-              <div>
-                <h3>{{ 'stash.create.' + conf.id + '.label' | translate }}</h3>
-                <p>{{ 'stash.create.' + conf.id + '.help' | translate }}</p>
-                <pa-radio-group
-                  [formControlName]="conf.id"
-                  [name]="conf.id">
-                  <pa-radio
-                    *ngFor="let option of conf.data.options"
-                    [value]="option.value">
-                    {{ option | learningOption: conf.id }}
-                  </pa-radio>
-                </pa-radio-group>
-              </div>
+
+            @if (isAnonymizationEnabled | async) {
+              <pa-toggle
+                formControlName="anonymization"
+                labelOnRight
+                [help]="'kb.settings.anonymization_toggle.help' | translate">
+                {{ 'kb.settings.anonymization_toggle.label' | translate }}
+              </pa-toggle>
             }
           </div>
           @if (creationInProgress) {
             <div class="saving-spinner">
               <nsi-spinner size="large"></nsi-spinner>
-              <p>{{ 'stash.create.in_progress' | translate }}</p>
+              <p>{{ 'kb.create.in_progress' | translate }}</p>
             </div>
           }
         }
@@ -75,12 +64,6 @@
 
   <pa-modal-footer>
     <div class="kb-creation-footer">
-      @if (error) {
-        <div class="error body-m">
-          {{ error | translate }}
-        </div>
-      }
-
       <div class="footer-buttons">
         @if (step > 0) {
           <pa-button
