--- a/libs/user/src/lib/onboarding/language-field/language-field.component.scss
+++ b/libs/user/src/lib/onboarding/language-field/language-field.component.scss
@@ -1,5 +1,11 @@
 @import 'apps/dashboard/src/variables';
 
+label.title-s {
+  display: block;
+  line-height: line-height(m);
+  margin-bottom: rhythm(1);
+}
+
 .languages-container {
   display: flex;
   flex-wrap: wrap;
