--- a/libs/sistema/theme/tokens/_expander.tokens.scss
+++ b/libs/sistema/theme/tokens/_expander.tokens.scss
@@ -2,6 +2,7 @@
 @import '../../../pastanaga-angular/projects/pastanaga-angular/src/styles/theme/spacing.tokens';
 
 $box-shadow-border-bottom: inset 0 -1px 0 $color-neutral-lighter;
+$box-shadow-border-top: inset 0 1px 0 $color-neutral-light;
 
 // Collapsed theme
 $background-color-collapsed-expander-header: $color-neutral-lightest;
