Fix KB settings in NucliaDB admin
(translation + empty fields management)

--- a/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.html
+++ b/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.html
@@ -101,7 +101,7 @@
         <pa-button
           data-cy="create-kb-button"
           (click)="openKbForm()">
-          {{ 'stash.create.title' | translate }}
+          {{ 'kb.create.title' | translate }}
         </pa-button>
       }
 
