Fix KB settings [sc-8276]
- Fix learningOption pipe with new translation keys (and use it in KB home page)
- enable save button when changing just anonymization or PDF annotation toggles
- Fix payload for user prompts

--- a/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
+++ b/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
@@ -70,7 +70,8 @@
             <pa-toggle
               formControlName="anonymization"
               labelOnRight
-              [help]="'kb.settings.anonymization_toggle.help' | translate">
+              [help]="'kb.settings.anonymization_toggle.help' | translate"
+              (valueChange)="updateKbFormTouchedState()">
               {{ 'kb.settings.anonymization_toggle.label' | translate }}
             </pa-toggle>
           }
@@ -79,7 +80,8 @@
               <pa-toggle
                 formControlName="pdf_annotation"
                 labelOnRight
-                [help]="'kb.settings.pdf_annotation_toggle.help' | translate">
+                [help]="'kb.settings.pdf_annotation_toggle.help' | translate"
+                (valueChange)="updateKbFormTouchedState()">
                 {{ 'kb.settings.pdf_annotation_toggle.label' | translate }}
               </pa-toggle>
             }
