--- a/libs/search-widget/src/components/answer/InitialAnswer.scss
+++ b/libs/search-widget/src/components/answer/InitialAnswer.scss
@@ -1,56 +1,12 @@
 .sw-initial-answer {
-  border: 1px solid var(--color-neutral-light);
-  border-radius: var(--rhythm-2);
-  margin-bottom: var(--rhythm-1);
-  padding: var(--rhythm-2) var(--rhythm-3);
-  position: relative;
-
+  margin-bottom: var(--rhythm-3);
   .title-s {
-    margin: 0;
-  }
-  .container {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-  .answer {
-    width: 100%;
-  }
-
-  .actions {
-    .go-to-chat {
-      align-items: center;
-      display: flex;
-      gap: var(--rhythm-1);
-    }
-    .feedback {
-      display: none;
-    }
-  }
-}
-@media (max-width: 600px) {
-  .sw-initial-answer .actions {
-    text-align: right;
+    margin: 0 0 var(--rhythm-1) 0;
   }
 }
 
 @media (min-width: 599px) {
   .sw-initial-answer {
     min-height: var(--rhythm-8);
-
-    .answer {
-      max-width: calc(100% - var(--rhythm-27));
-    }
-    .actions {
-      position: absolute;
-      right: var(--rhythm-4);
-      text-align: right;
-      width: var(--rhythm-27);
-      .feedback {
-        display: flex;
-        align-items: center;
-        justify-content: end;
-      }
-    }
   }
 }
