--- a/libs/search-widget/src/components/answer/Answer.scss
+++ b/libs/search-widget/src/components/answer/Answer.scss
@@ -1,5 +1,5 @@
 .sw-answer {
-  .text {
+  .answer-text {
     line-height: calc(var(--font-size-base) * 1.4);
     margin-top: var(--rhythm-1);
   }
